syntax = "proto3";

package vyletdatabase;
option go_package = "./;vyletdatabase";

import "buf/validate/validate.proto";

import "google/protobuf/timestamp.proto";

service ProfileService {
  rpc CreateProfile(CreateProfileRequest) returns (CreateProfileResponse);
  rpc UpdateProfile(CreateProfileRequest) returns (CreateProfileResponse);
  rpc DeleteProfile(DeleteProfileRequest) returns (DeleteProfileResponse);

  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
  rpc GetProfiles(GetProfilesRequest) returns (GetProfilesResponse);
}

message Profile {
  string did = 1 [
    (buf.validate.field).required = true
  ];
  optional string display_name = 2;
  optional string description = 3;
  optional string pronouns = 4;
  optional string avatar = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp indexed_at = 7;
}

message CreateProfileRequest {
  Profile profile = 1;
}

message CreateProfileResponse {
  optional string error = 1;
}

message DeleteProfileRequest {
  string did = 1 [
    (buf.validate.field).required = true
  ];
}

message DeleteProfileResponse {
  optional string error = 1;
}

message GetProfileRequest {
  string did = 1 [
    (buf.validate.field).required = true
  ];
}

message GetProfileResponse {
  optional string error = 1;
  optional Profile profile = 2;
}

message GetProfilesRequest {
  repeated string dids = 1 [
    (buf.validate.field).required = true
  ];
}

message GetProfilesResponse {
  optional string error = 1;
  repeated Profile profiles = 2;
}
